--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "html-to-image": "^1.11.11",
     "lodash": "^4.17.21",
     "path-browserify": "^1.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0-rc-6d3110b4d9-20240531",
+    "react-dom": "^19.0.0-rc-6d3110b4d9-20240531",
     "react-easy-crop": "^5.0.7"
   },
   "devDependencies": {
     "@pandabox/prettier-plugin": "^0.1.3",
     "@pandacss/eslint-plugin": "^0.1.5",
     "@pandacss/studio": "^0.39.1",
+    "@vitejs/plugin-react": "^4.3.0",
     "@types/file-saver": "^2.0.7",
     "@types/lodash": "^4.17.4",
     "@types/react": "^18.3.3",
@@ -37,6 +38,8 @@
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
+    "eslint-plugin-react-compiler": "^0.0.0-experimental-51a85ea-20240601",
     "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
